# AirCube

./: .gitignore  CONTRIBUTING.md  DIY_SUPERMINI.md  HOME_ASSISTANT.md  README.md  SMARTTHINGS.md
docs/: BLE_GATT_PROTOCOL.md
firmware/: sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  ble_bthome.c  ble_bthome.h  ble_gatt.c  ble_gatt.h  board_config.h  button.c  button.h  device_model.c  device_model.h  ens16x_driver.c  ens210.c  ens210.h  history.c  history.h  i2c_driver.c  i2c_driver.h  idf_component.yml  led.c  led_color_lib.c  main.c  radio_mode.c  radio_mode.h  scd41.c  scd41.h  serial_protocol.c  serial_protocol.h  vcnl4040.c  vcnl4040.h  ws2812_control.c  ws2812_control.h  zigbee.c  zigbee.h
mechanical/air-circle/: air_circ_base.stl  air_circ_lock.stl  air_circ_top.stl  air_circle.stp
mechanical/original/: AirCube air wall 11-7-43.3mf  AirCube bottom_prod_12-11.step  AirCube top 20mm PROD.step
scripts/: aircube_app.py  aircube_ble_core.py  aircube_ble_monitor.py  aircube_data_visualizer.py  aircube_replay_script.py  install.bat  install.py  install.sh  requirements.txt
smartthings/aircube-zigbee/: config.yml
smartthings/aircube-zigbee/src/: init.lua
z2m/: aircube.js  aircube.mjs
zha/: aircube.py
